# Stock-Predictor-ML

./: .env  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  run_server.py  stock_predictor_api.py  test_api.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorMessage.tsx  LoadingSpinner.tsx  ModelStatus.tsx  PredictionResult.tsx  StockAnalysis.tsx  StockChart.tsx  StockNews.tsx  TickerInput.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: formatters.ts
nginx/: nginx.conf
training/: lstm_stock_predictor.pth  lstm_stock_trainer.py  model_metadata.pkl  pyproject.toml  scaler.pkl
