[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
    "yfinance>=0.2.63",
]
